# F1InkDashboard

./: .cnb.yml  .env.example  .gitignore  CMakeLists.txt  build.sh  docker-compose.influxdb.yml  sdkconfig  sdkconfig.defaults
backend/: README.md  requirements.txt
build2/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Formula1_16_ascii.bdf.S  assets-flash_args  cmake_install.cmake  config.env  flash_args.in  flash_project_args  flasher_args.json  gallery.html.S  gin_1.svg.S  gin_2.svg.S  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  wifi_configuration.html.S  wifi_configuration_done.html.S  x509_crt_bundle.S
docs/: influxdb-openf1.md  ui-pages-ascii.md
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  assets_fs.cc  assets_fs.h  backend_url.cc  backend_url.h  idf_component.yml  main.cc  settings.cc  ws_client_service.cc  ws_client_service.h
main/assets/: README.md
main/assets/gallery/: list.json
main/audio/: audio_service.cc  audio_service.h
main/audio/codecs/: es8311_audio_codec.cc
main/boards/common/: board.cc  board.h  i2c_bus_lock.cc  i2c_bus_lock.h  i2c_device.cc  i2c_device.h
main/boards/zectrix/: zectrix_nfc.cc  zectrix_nfc.h
main/boards/zectrix-s3-epaper-4.2/: charge_status.h  config.h  custom_lcd_display.cc  custom_lcd_display.h  rtc_pcf8563.cc  rtc_pcf8563.h  zectrix-s3-epaper-4.2.cc
main/boards/zectrix-s3-epaper-4.2/FT/: acoustic_selftest.cc  acoustic_selftest.h  factory_test_service.cc  factory_test_service.h
main/common/: sleep_manager.cc  sleep_manager.h  time_sync.cc  time_sync.h
main/components/78__esp-ml307/: .component_hash  CHECKSUMS.json
main/components/78__esp-ml307/include/: mqtt.h
main/components/78__esp-ml307/src/: http_client.cc  web_socket.cc
main/components/78__esp-ml307/src/esp/: esp_mqtt.cc  esp_ssl.cc
main/components/78__esp-wifi-connect/: CMakeLists.txt  ssid_manager.cc  wifi_configuration_ap.cc  wifi_manager.cc  wifi_station.cc
main/components/78__esp-wifi-connect/assets/: wifi_configuration.html
main/components/78__esp-wifi-connect/assets/static/: gallery.html
main/components/78__esp-wifi-connect/include/: network_probe_target.h  wifi_manager.h  wifi_station.h
main/components/78__xiaozhi-fonts/: CMakeLists.txt
main/components/78__xiaozhi-fonts/include/: font_zectrix.h
main/components/78__xiaozhi-fonts/src/: SourceHanSansSC_Medium_slim.c  SourceHanSansSC_Regular_slim.c  font_zectrix_16_1.c  font_zectrix_48_1.c
main/components/u8g2-fonts/: CMakeLists.txt
main/components/u8g2-fonts/include/: u8g2_font_section.h  u8g2_fonts.h
main/components/u8g2-fonts/src/: Formula1_14_ascii.bdf  Formula1_16_ascii.bdf  u8g2_font_formula1_14_ascii.c  u8g2_font_formula1_16_ascii.c
main/display/: display.cc  display.h  lcd_display.cc  lcd_display.h  ui_nav.h  ui_page.h  ui_page_registry.cc  ui_page_registry.h  ui_paged_list_nav.h
main/display/lvgl_display/: lvgl_display.cc  lvgl_display.h  lvgl_theme.h
main/display/pages/: breaking_news_page_adapter.cc  breaking_news_page_adapter.h  f1_page_adapter.cc  f1_page_adapter.h  f1_page_adapter_common.cc  f1_page_adapter_common.h  f1_page_adapter_fetch.cc  f1_page_adapter_net.cc  f1_page_adapter_net.h  f1_page_adapter_payloads.h  f1_page_adapter_telemetry.cc  f1_page_adapter_ui_circuit.cc  f1_page_adapter_ui_live.cc  f1_page_adapter_ui_menu.cc  f1_page_adapter_ui_offweek.cc  f1_page_adapter_ui_race.cc  f1_page_adapter_ui_sessions.cc  f1_page_adapter_ui_telemetry.cc  factory_test_page_adapter.cc  factory_test_page_adapter.h  gallery_page_adapter.cc  gallery_page_adapter.h  meme_page_adapter.cc  meme_page_adapter.h  wifi_setup_page_adapter.cc  wifi_setup_page_adapter.h
main/protocols/: protocol.h
scripts/: build_assets.ps1  build_default_assets.py  epd_png.py  gen_1bpp_bin.py  (+1 more)
(+673 files in other folders)
