idf_component_register(
    SRCS
        "wifi_manager.cc"
        "wifi_configuration_ap.cc"
        "wifi_station.cc"
        "ssid_manager.cc"
        "dns_server.cc"
    INCLUDE_DIRS
        "include"
    EMBED_TXTFILES
        "assets/wifi_configuration.html"
        "assets/wifi_configuration_done.html"
        "assets/static/gallery.html"
        "assets/static/gin_1.svg"
        "assets/static/gin_2.svg"
    REQUIRES
    	"esp_timer"
        "esp_http_server"
        "esp_wifi"
        "nvs_flash"
        "json"
)
